--- a/p8105_hw3_nz2333.Rmd
+++ b/p8105_hw3_nz2333.Rmd
@@ -11,7 +11,10 @@ library(p8105.datasets)
 data("instacart")
 ```
 
-_Problem 1_
+# Problem 1
+
+/The dataset instacart has 1384617 observations and 15 variables. 
+Important variables include: product_name, aisle, and department, which are all categorical variables./
 
 #Question1
 ```{r}
@@ -20,7 +23,8 @@ aisles = instacart %>%
 
 aisles
 ```
-/There are total 134 aisles in the data. The aisle with most n is "fresh vegetables", with 150609 items./
+
+/There are total 134 aisles in the data. The aisle with most oredered items is "fresh vegetables", with 150609 items./
 
 #Question2
 ```{r}
@@ -28,13 +32,15 @@ aisles2 = instacart %>%
   count(aisle, sort = TRUE)%>%
   filter(n > 10000)
 
-ggplot(data = aisles2, aes(x = reorder(aisle, -n), y = n))+
-  geom_bar(stat = "identity")+
-  theme(axis.text.x = element_text(angle = 90, vjust = 0.5, hjust = 1))+
-  labs(title = "Number of Items in each aisle")+
-  xlab("Aisles")+
+ggplot(data = aisles2, aes(x = reorder(aisle, -n), y = n)) +
+  geom_bar(stat = "identity") +
+  theme(axis.text.x = element_text(angle = 90, vjust = 0.5, hjust=1))+
+  labs(title = "Number of Items in each aisle") +
+  xlab("Aisles") +
   ylab("Items Count")
 ```
+
+/There are 39 aisles with more than 10000 items ordered. Fresh vegetables and fresh fruits are the top two aisles with highest ordered items./
 
 #Question3
 ```{r}
@@ -53,3 +59,108 @@ instacart %>%
   knitr::kable()
 ```
 
+/For aisle "baking ingredients": the three most popular items are cane sugar, light brown sugar, and pure brown sugar. 
+
+For aisle "dog food care":the three most popular items are Organix Chicken & Brown Rice Recipe, Small Dog Biscuits, and Snack Sticks Chicken & Rice Recipe Dog Treats. 
+
+For aisle "packaged vegetables fruits": the three most popular items are Organic Baby Spinach, Organic Blueberries, and Organic Raspberries./
+
+#Question4
+```{r}
+aisle4 = instacart %>%
+  filter(product_name %in% c("Pink Lady Apples", "Coffee Ice Cream"))%>%
+  group_by(product_name, order_dow)%>%
+  summarize(
+    mean_hour = mean(order_hour_of_day)
+  )%>%
+  pivot_wider(names_from = order_dow, 
+              values_from = mean_hour)
+
+colnames(aisle4)= c(" ", "Sunday", "Monday", "Tuesday", "Wednesday", "Thursday", "Friday", "Saturday")
+
+aisle4 %>%
+  knitr::kable()
+```
+
+/The mean hour of the day ordering Pink Lady Apples and Coffee Ice Creamon on each day of the week is shown as above. Day of the week being coded as 0 =Sunday, 1 = Monday, 2 = Tuesday, 3 = Wednesday, 4 = Thusday, 5 = Friday, 6 = Saturday. /
+
+# Problem 2
+```{r}
+data("brfss_smart2010")
+```
+
+*Data cleaning*
+```{r}
+problem2 = brfss_smart2010 %>%
+  janitor::clean_names()%>%
+  rename(State = locationabbr,
+         County = locationdesc) %>%
+  filter(
+    topic == "Overall Health", 
+    response %in% c("Poor", "Fair", "Good", "Very good","Excellent")) %>%  
+   distinct() %>% 
+  mutate(
+    response = factor(response, levels = c("Poor", "Fair", "Good", "Very good","Excellent"))
+    )
+```
+
+#Question1
+```{r}
+q1_1 = problem2 %>%
+  filter(year == 2002) %>%
+  group_by(State, year) %>%
+  summarize(
+    location_num = n_distinct(County)
+  ) %>%
+  filter(location_num > 6)
+
+q1_1
+
+q1_2 = problem2 %>%
+  filter(year == 2010) %>%
+  group_by(State, year) %>%
+  summarize(
+    location_num = n_distinct(County)
+  ) %>%
+  filter(location_num > 6)
+
+q1_2
+```
+
+/In 2002, the following states were observed at 7 or more locations: CT, FL, MA, NC, NJ, and PA. 
+
+In 2010, the following states were observed at 7 or more locations: CA, CO, FL, MA, MD, NC, NE, NJ, NY, OH, PA, SC, TX, and WA./ 
+
+# Question2
+```{r}
+q2 = problem2 %>%
+  filter(response == "Excellent") %>%
+  group_by(State, year) %>%
+  summarize(avg = mean(data_value)) %>%
+  select(year, State, avg)
+
+q2 %>%
+  ggplot(aes(x = year, y = avg, group = State, color = State))+
+  geom_line()
+```
+
+/This is a plot of the average data_value of each state over time (year). /
+
+# Question3
+```{r}
+q3 = problem2 %>%
+  filter(
+    year %in% c("2006", "2010"),
+    response %in% c("Poor", "Fair", "Good", "Very good","Excellent"), 
+    State == "NY"
+  ) %>%
+  select(year, State, response, data_value) %>%
+  drop_na()
+  
+q3 %>%
+  ggplot(aes(x = response, y = data_value)) +
+  geom_boxplot() +
+  facet_grid(.~year)
+```
+
+/These two graphs are for data value distributioof each reponse level for year 2006 and 2010. /
