--- a/p8105_hw3_nz2333.md
+++ b/p8105_hw3_nz2333.md
@@ -290,3 +290,88 @@ q3 %>%
 
 /These two graphs are for data value distributioof each reponse level
 for year 2006 and 2010. /
+
+# Problem 3
+
+\#Question1
+
+``` r
+problem3 = read_csv("./accel_data.csv")
+```
+
+    ## Rows: 35 Columns: 1443
+
+    ## -- Column specification --------------------------------------------------------
+    ## Delimiter: ","
+    ## chr    (1): day
+    ## dbl (1442): week, day_id, activity.1, activity.2, activity.3, activity.4, ac...
+
+    ## 
+    ## i Use `spec()` to retrieve the full column specification for this data.
+    ## i Specify the column types or set `show_col_types = FALSE` to quiet this message.
+
+``` r
+problem3 %>%
+  janitor::clean_names()%>%
+  mutate(
+    day_type = ifelse(day_id %in% c(6, 7), 
+                      "Weedkend", "Weekday") 
+  ) %>%
+ relocate(day_id, day, day_type, week)
+```
+
+    ## # A tibble: 35 x 1,444
+    ##    day_id day       day_type  week activity_1 activity_2 activity_3 activity_4
+    ##     <dbl> <chr>     <chr>    <dbl>      <dbl>      <dbl>      <dbl>      <dbl>
+    ##  1      1 Friday    Weekday      1       88.4       82.2       64.4       70.0
+    ##  2      2 Monday    Weekday      1        1          1          1          1  
+    ##  3      3 Saturday  Weekday      1        1          1          1          1  
+    ##  4      4 Sunday    Weekday      1        1          1          1          1  
+    ##  5      5 Thursday  Weekday      1       47.4       48.8       46.9       35.8
+    ##  6      6 Tuesday   Weedkend     1       64.8       59.5       73.7       45.7
+    ##  7      7 Wednesday Weedkend     1       71.1      103.        68.5       45.4
+    ##  8      8 Friday    Weekday      2      675        542       1010        779  
+    ##  9      9 Monday    Weekday      2      291        335        393        335  
+    ## 10     10 Saturday  Weekday      2       64         11          1          1  
+    ## # ... with 25 more rows, and 1,436 more variables: activity_5 <dbl>,
+    ## #   activity_6 <dbl>, activity_7 <dbl>, activity_8 <dbl>, activity_9 <dbl>,
+    ## #   activity_10 <dbl>, activity_11 <dbl>, activity_12 <dbl>, activity_13 <dbl>,
+    ## #   activity_14 <dbl>, activity_15 <dbl>, activity_16 <dbl>, activity_17 <dbl>,
+    ## #   activity_18 <dbl>, activity_19 <dbl>, activity_20 <dbl>, activity_21 <dbl>,
+    ## #   activity_22 <dbl>, activity_23 <dbl>, activity_24 <dbl>, activity_25 <dbl>,
+    ## #   activity_26 <dbl>, activity_27 <dbl>, activity_28 <dbl>, ...
+
+/The final cleaned dataset has 35 observations with 1444 variables.
+Important vatiables are: day, day\_type, week, day\_id, and all the
+activity values./
+
+\#Question2
+
+``` r
+p3q2 = problem3 %>%
+  mutate(
+    day_activity = rowSums(across(activity.1:activity.1440), na.rm = TRUE)
+  )
+
+p3q2 %>%
+  select(week, day, day_activity) %>%
+  pivot_wider(
+    names_from = day, 
+    values_from = day_activity) %>%
+  relocate(week, Monday, Tuesday, Wednesday, Thursday, Friday, Saturday, Sunday) %>%
+  knitr::kable()
+```
+
+| week |    Monday |  Tuesday | Wednesday | Thursday |   Friday | Saturday | Sunday |
+|-----:|----------:|---------:|----------:|---------:|---------:|---------:|-------:|
+|    1 |  78828.07 | 307094.2 |    340115 | 355923.6 | 480542.6 |   376254 | 631105 |
+|    2 | 295431.00 | 423245.0 |    440962 | 474048.0 | 568839.0 |   607175 | 422018 |
+|    3 | 685910.00 | 381507.0 |    468869 | 371230.0 | 467420.0 |   382928 | 467052 |
+|    4 | 409450.00 | 319568.0 |    434460 | 340291.0 | 154049.0 |     1440 | 260617 |
+|    5 | 389080.00 | 367824.0 |    445366 | 549658.0 | 620860.0 |     1440 | 138421 |
+
+/Based on the output table, we see that activity sum for each day is
+typically lower on start of the week, and increases up over the
+weekdays, and drops again over the weekends./
+
+\#Question3
