--- a/p8105_hw3_nz2333.md
+++ b/p8105_hw3_nz2333.md
@@ -375,3 +375,41 @@ typically lower on start of the week, and increases up over the
 weekdays, and drops again over the weekends./
 
 \#Question3
+
+``` r
+p3q3 = problem3 %>%
+  select(week, day, day_id, activity.1:activity.1440) %>%
+  pivot_longer(
+    activity.1:activity.1440, names_to = "Minute", values_to = "Activity")
+
+p3q3 %>%
+  mutate(
+  day = factor(day, levels = c("Monday", "Tuesday", "Wednesday", "Thursday", "Friday", "Saturday", "Sunday"))
+  )
+```
+
+    ## # A tibble: 50,400 x 5
+    ##     week day    day_id Minute      Activity
+    ##    <dbl> <fct>   <dbl> <chr>          <dbl>
+    ##  1     1 Friday      1 activity.1      88.4
+    ##  2     1 Friday      1 activity.2      82.2
+    ##  3     1 Friday      1 activity.3      64.4
+    ##  4     1 Friday      1 activity.4      70.0
+    ##  5     1 Friday      1 activity.5      75.0
+    ##  6     1 Friday      1 activity.6      66.3
+    ##  7     1 Friday      1 activity.7      53.8
+    ##  8     1 Friday      1 activity.8      47.8
+    ##  9     1 Friday      1 activity.9      55.5
+    ## 10     1 Friday      1 activity.10     43.0
+    ## # ... with 50,390 more rows
+
+``` r
+p3q3 %>%
+  ggplot(aes(x = Minute, y = Activity, color = day, se = FALSE)) +
+  geom_line () +
+  geom_smooth(aes(group = day), se = FALSE) 
+```
+
+    ## `geom_smooth()` using method = 'gam' and formula 'y ~ s(x, bs = "cs")'
+
+![](p8105_hw3_nz2333_files/figure-gfm/unnamed-chunk-14-1.png)<!-- -->
